Add a swap button for the diff

--- a/src/apisof.net/Pages/Diff.razor
+++ b/src/apisof.net/Pages/Diff.razor
@@ -9,6 +9,9 @@
             <label>Left</label>
             <FrameworkPicker @bind-Selected="@Left"/>
         </div>
+        <div class="row justify-content-center">
+            <button title="Swap left and right" class="btn btn-sm btn-outline-secondary" @onclick="Swap"><span class="oi oi-arrow-thick-top"></span> <span class="oi oi-arrow-thick-bottom"></span></button>
+        </div>
         <div class="form-group">
             <label>Right</label>
             <FrameworkPicker @bind-Selected="@Right"/>
