Change ApiFrameworkAvailability to return all declarations
Previously, we only returned the first match. That is, if an API had a
framework declaration, we would not return any package information. And for
packages we'd only return the first one.

--- a/src/apisof.net/Shared/ApiDetails.razor
+++ b/src/apisof.net/Shared/ApiDetails.razor
@@ -140,8 +140,9 @@
 
                 @if (SelectedAvailability is { IsInBox: false })
                 {
-                    var package = SelectedAvailability.Package!.Value;
-                    var folder = SelectedAvailability.PackageFramework!.GetShortFolderName();
+                    var packageDeclaration = SelectedAvailability.PackageDeclarations.First();
+                    var package = packageDeclaration.Package;
+                    var folder = packageDeclaration.PackageFramework.GetShortFolderName();
                     <tr>
                         <th>Package</th>
                         <td>
