--- a/src/apisof.net/wwwroot/css/site.css
+++ b/src/apisof.net/wwwroot/css/site.css
@@ -51,15 +51,19 @@
     outline: none;
 }
 
+tr.no-border-top th,
+tr.no-border-top td {
+    border-top: none;
+}
+
+code {
+    color: unset !important;
+}
+
 /* Stats */
 
 .statistics-table.table td:nth-child(2) {
     text-align: right;
-}
-
-.statistics-table tr.no-border-top th,
-.statistics-table tr.no-border-top td {
-    border-top: none;
 }
 
 /* Search */
@@ -304,6 +308,12 @@
         .syntax-view .reference {
             color: rgb(220, 220, 220);
         }
+}
+
+/* Reference requirments */
+
+.reference-requirement p {
+    margin-bottom: 0;
 }
 
 /* Version table */
