--- a/src/apisof.net/Shared/ApiDetails.razor
+++ b/src/apisof.net/Shared/ApiDetails.razor
@@ -231,7 +231,7 @@
                     </tr>
                 }
 
-                <tr class="bg-dark">
+                <tr class="section-row">
                     <th colspan="2">
                         Information specific to <code>@SelectedAvailability!.Framework.GetBaseFrameworkOrSelf().GetShortFolderName()</code>
                     </th>
@@ -287,7 +287,7 @@
                         </tr>
                     }
 
-                    <tr class="bg-dark">
+                    <tr class="section-row">
                         <th colspan="2">
                             Information specific to <code>@SelectedAvailability!.Framework.GetShortFolderName()</code>
                         </th>
