Ensure that expandable rows have proper cursor

--- a/src/apisof.net/Pages/FeatureUsage.razor
+++ b/src/apisof.net/Pages/FeatureUsage.razor
@@ -83,6 +83,7 @@
 
                     <tr title="@usageDetailsTitle">
                         <th scope="row" onmousedown="@(() => ExpandNode(node, !isExpanded))"
+                            role="button"
                             style="@marginLeft">
 
                             @if (!isLeaf)
