Revert "added skip to main"
This reverts commit 03ce36e60b6b63d9b1a7a171c7483d5fcb1662aa.

--- a/src/apisof.net/Pages/Index.razor
+++ b/src/apisof.net/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
 <div class="jumbotron jumbotron-fluid">
-    <div class="container" id="mainContent">
+    <div class="container">
         <h1 class="display-4">.NET API Catalog</h1>
         <p class="lead">The catalog contains <strong>@Statistics.NumberOfApis.ToString("N0")</strong> APIs.</p>
 
