--- a/src/apisof.net/Shared/MainLayout.razor
+++ b/src/apisof.net/Shared/MainLayout.razor
@@ -53,7 +53,7 @@
     </div>
 </nav>
 
-<div class="nofocus" tabindex="0">
+<div class="nofocus" role="main">
     <CascadingValue Value="this">
     @Body
     </CascadingValue>
