--- a/src/apisof.net/Shared/Glyph.razor
+++ b/src/apisof.net/Shared/Glyph.razor
@@ -1,3 +1,3 @@
 @using ApisOfDotNet.Services
 
-<img height="16" width="16" src="@Url" />
+<img height="16" width="16" src="@Url" alt="" role="presentation" />
