--- a/src/apisof.net/Shared/ItemLimiter.razor
+++ b/src/apisof.net/Shared/ItemLimiter.razor
@@ -5,7 +5,7 @@
     if (i == Limit && !_showMore)
     {
         var remaining = (Items.Length - Limit).ToString("N0");
-        <button class="btn btn-outline-secondary mt-3" @onclick="() => _showMore = true">Show @remaining remaining items</button>
+        <li><button class="btn btn-outline-secondary mt-3" @onclick="() => _showMore = true">Show @remaining remaining items</button></li>
         break;
     }
 
