Ensure every ARIA progressbar node has an accessible name

--- a/src/apisof.net/Pages/FeatureUsage.razor
+++ b/src/apisof.net/Pages/FeatureUsage.razor
@@ -23,7 +23,7 @@
                             <div class="row align-items-center" title="@title">
                                 <div class="col col-md-5 col-xl-3">
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: @value%;" aria-valuenow="@value" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" aria-label="@title" style="width: @value%;" aria-valuenow="@value" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                                 <div class="col" style="max-width: 5rem;">
@@ -104,7 +104,7 @@
                                 <div class="row">
                                     <div class="col-8">
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" style="width: @value%;" aria-valuenow="@value" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar" role="progressbar" aria-label="@node.Name" style="width: @value%;" aria-valuenow="@value" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
                                     <div class="col-4">
