--- a/src/apisof.net/Shared/FrameworkPicker.razor
+++ b/src/apisof.net/Shared/FrameworkPicker.razor
@@ -1,6 +1,6 @@
 ﻿<div class="row">
     <div class="col">
-        <select class="custom-select" @bind="Model.SelectedFamilyValue">
+        <select class="custom-select" @bind="Model.SelectedFamilyValue" aria-label="Select family">
             @foreach (var family in Model.Families)
             {
                 <option selected="@(Model.SelectedFamily == family)" value="@family.Value">@family</option>
@@ -8,7 +8,7 @@
         </select>
     </div>
     <div class="col-3 pl-0">
-        <select class="custom-select" @bind="@Model.SelectedVersionValue">
+        <select class="custom-select" @bind="@Model.SelectedVersionValue" aria-label="Select version">
             @foreach (var version in Model.Versions)
             {
                 <option selected="@(Model.SelectedVersion == version)" value="@version.Value">@version</option>
@@ -16,7 +16,7 @@
         </select>
     </div>
     <div class="col-3 pl-0">
-        <select class="custom-select" @bind="@Model.SelectedPlatformValue">
+        <select class="custom-select" @bind="@Model.SelectedPlatformValue" aria-label="Select platform">
             @foreach (var version in Model.Platforms)
             {
                 <option selected="@(Model.SelectedPlatform == version)" value="@version.Value">@version</option>
@@ -27,7 +27,7 @@
         @{
             var isDisabled = Model.SelectedPlatformVersionValue is null;
         }
-        <select class="custom-select" @bind="@Model.SelectedPlatformVersionValue" disabled="@isDisabled">
+        <select class="custom-select" @bind="@Model.SelectedPlatformVersionValue" disabled="@isDisabled" aria-label="Select platform version">
             @foreach (var version in Model.PlatformVersions)
             {
                 <option selected="@(Model.SelectedPlatformVersion == version)" value="@version.Value">@version</option>
