update breadcrumb contrast color

--- a/src/apisof.net/wwwroot/css/site.css
+++ b/src/apisof.net/wwwroot/css/site.css
@@ -430,6 +430,12 @@ a {
     color: #F0F0F0 !important;
 }
 
+/* breadcrumb */
+.breadcrumb-item.active{
+    color: #606970;
+}
+
+
 /* Catalog */
 .list-unstyled a
 {
