--- a/src/apisof.net/Shared/MainLayout.razor
+++ b/src/apisof.net/Shared/MainLayout.razor
@@ -53,7 +53,7 @@
     </div>
 </nav>
 
-<div class="nofocus" tabindex="0">
+<div class="nofocus" tabindex="0" role="main">
     <CascadingValue Value="this">
     @Body
     </CascadingValue>
@@ -62,7 +62,7 @@
 
 <hr />
 
-<div class="container-fluid">
+<div class="container-fluid" role="complementary">
     @if (CatalogJobInfo.Success)
     {
         <span class="mr-1 oi oi-circle-check text-success"></span>
