--- a/src/apisof.net/wwwroot/css/site.css
+++ b/src/apisof.net/wwwroot/css/site.css
@@ -398,3 +398,10 @@ code {
 .popover {
     max-width: 100%;
 }
+
+span[role="button"]:focus
+{
+    outline: 2px solid #0078D4;
+    border-radius: 4px;
+    background-color: #e6f0ff;
+}
