--- a/src/apisof.net/Shared/ApiDetails.razor
+++ b/src/apisof.net/Shared/ApiDetails.razor
@@ -56,7 +56,7 @@
                         if (childExcluded)
                             continue;
 
-                        <li>
+                        <li class="flex-inline-breakable">
                             @if (child == Api)
                             {
                                 <Glyph Kind="@child.Kind.GetGlyph()" /> <span class="font-weight-bold @childCssClasses">@child.Name</span> @childMarkup
@@ -78,7 +78,7 @@
                         if (extensionExcluded)
                             continue;
 
-                        <li>
+                        <li class="flex-inline-breakable">
                             @if (extensionMethod == ExtensionMethod)
                             {
                                 <Glyph Kind="GlyphKind.ExtensionMethod" /> <span class="font-weight-bold @extensionCssClasses">@extensionMethod.ExtensionMethod.Name</span> @extensionMarkup
