--- a/src/apisof.net/wwwroot/css/site.css
+++ b/src/apisof.net/wwwroot/css/site.css
@@ -68,7 +68,8 @@ code {
 
 /* Search */
 
-.modal {
+.modal
+{
     display: none;
 }
 
@@ -84,12 +85,38 @@ code {
     margin-right: 5%;
 }
 
-.search-results {
-    overflow-y: auto;
-    max-height: 400px;
+.modal-dialog
+{
+    height: 100%;
+    max-height: 90vh;
 }
 
-.search-result-row {
+.modal-content
+{
+    max-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-body
+{
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+}
+
+.modal-body .search-input{
+    max-height:30px;
+}
+
+.search-results
+{
+    overflow-y: auto;
+    max-height: 90%;
+}
+
+.search-result-row
+{
     color: var(--color-text-primary);
     border-radius: 0.25rem;
     padding: 0.25rem;
@@ -397,4 +424,14 @@ code {
 
 .popover {
     max-width: 100%;
+}
+
+.flex-inline-breakable
+{
+    display: flex;
+    align-items: center;
+    gap: 0.3rem;
+    white-space: normal;
+    word-break: break-all;
+    overflow-wrap: anywhere;
 }
