--- a/src/apisof.net/Shared/MainLayout.razor
+++ b/src/apisof.net/Shared/MainLayout.razor
@@ -1,5 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
+<a href="javascript:void(0);" id="skipToMain" class="skip-to-main" target="_self">Skip to main content</a>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dotnet">
     <a class="navbar-brand" href="/">.NET API Catalog</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +55,7 @@
     </div>
 </nav>
 
-<div class="nofocus" tabindex="0">
+<div class="nofocus" id="main-content" tabindex="-1">
     <CascadingValue Value="this">
     @Body
     </CascadingValue>
